# TopoLS

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
docs/benchmark/: qaoa_16.qasm  wstate_16.qasm
src/: 2tqec.py  exp.py  pipe_sim.py  prog.py  setup.py  tutorial.ipynb
src/TopoLS/: layer_mcts.py  trans2tqec.py
src/benchmark/: bv_16.qasm  dj_16.qasm  grover_6.qasm  qft_16.qasm  random_500.qasm
src/topols/: layer_mcts.py  layer_partition.py  trans2tqec.py
src/topols.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tutorial/: 2tqec.py  pipe_sim.py  prog.py  tutorial.ipynb
tutorial/benchmark/: ghz_16.qasm  qpe_16.qasm  vqe_16.qasm
