[build-system]
requires = ["uv_build>=0.8.17,<0.12.0"]
build-backend = "uv_build"

[project]
name = "topols"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.0,<2.5",
    "pandas>=2.3,<3.0",
    "pyvista==0.47.3",
    "pyzx==0.10.2",
    "sinter==1.15.0",
    "tqdm>=4.67,<4.68",
    "tqec>=0.1.0",
]
